k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notification
  namespace: my-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-notification
  template:
    metadata:
      labels:
        app: ms-notification
    spec:
      containers:
        - name: ms-notification
          image: aminramazanov/ms-notifiction:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
