k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-notification
  namespace: my-project
spec:
  selector:
    app: ms-notification
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
