k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-notification
  namespace: my-project
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ms-notification.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-notification
                port:
                  number: 8082
